--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <div class="container">
 
      <center>
-       <h3 class="btn btn-warning heading">EMOTION TO EMOJI APP
+       <h3 class="btn btn-danger heading">EMOTION TO EMOJI APP
          <br>
          <span>&#128522;</span>
          <span>&#128512;</span>
@@ -43,7 +43,7 @@
          <label>Webcam View - </label>
          <div id="camera"></div>
          <br><br>
-         <button onclick="take_snapshot();" class="btn btn-warning">Capture Image</button>
+         <button onclick="take_snapshot();" class="btn btn-danger">Capture Image</button>
        </div>
        <div class="col-md-4 col-sm-12 col-xs-12"> <label>Prediction 1 - </label>
          <p class="emotion_name" id="result_emotion_name"></p>
@@ -52,7 +52,7 @@
          <p class="emoji" id="update_emoji2"></p>
        </div>
        <div class="col-md-4 col-sm-12 col-xs-12"> <label>Snapshot - </label>
-         <div id="result"></div> <br><br> <button onclick="check();" class="btn btn-success">Predict Emotion</button>
+         <div id="result"></div> <br><br> <button onclick="check();" class="btn btn-danger">Predict Emotion</button>
        </div>
      </center>
 
